@@ -74,6 +74,11 @@ gui_editor_new (void)
   gtk_source_style_scheme_manager_append_search_path (self->style_scheme_manager, "data");
   gtk_source_style_scheme_manager_append_search_path (self->style_scheme_manager, ".");
 
+#if GTK_CHECK_VERSION(3, 0, 0)
+  GtkSourceMarkAttributes *mark_attributes = gtk_source_mark_attributes_new ();
+  gtk_source_mark_attributes_set_icon_name (mark_attributes, "gtk-no");
+  gtk_source_view_set_mark_attributes (GTK_SOURCE_VIEW (self->widget), MARKER_BREAKPOINT, mark_attributes, 0);
+#else
   GdkPixbuf *pixbuf;
   pixbuf = gui_editor_get_stock_icon (GTK_WIDGET(self->widget), GTK_STOCK_NO, GTK_ICON_SIZE_MENU);
   if (pixbuf)
@@ -81,6 +86,7 @@ gui_editor_new (void)
 	  gtk_source_view_set_mark_category_icon_from_pixbuf (GTK_SOURCE_VIEW (self->widget), MARKER_BREAKPOINT, pixbuf);
 	  g_object_unref (pixbuf);
 	}
+#endif
 
   return self;
 }
