@@ -36,6 +36,9 @@
 #include <gtksourceview/gtksourcelanguagemanager.h>
 #include <gtksourceview/gtksourceprintcompositor.h>
 #include <gtksourceview/gtksourcestyleschememanager.h>
+#if GTK_CHECK_VERSION(3, 0, 0)
+#include <gtksourceview/gtksource.h>
+#endif
 #include "callbacks.h"
 
 #define DEFAULT_EDITOR_FONT   (const gchar*) "Monospace 12"
