@@ -6,7 +6,11 @@ Translations:
          Updated - Arabic (ar), French (fr), German (de), Greek (el),
          Kannada (kn), Spanish (es), Tamil (ta).
 Note to packagers:
-         Updated dependency: GTK+ >= 2.24, GtkSourceView >= 2.10
+         It is now possible to build the application against GTK3 APIs using
+         --with-gtk3 option of the configure script. The option is currently
+         set to no by default.
+         Updated dependency: GTK+ >= 2.24, GtkSourceView >= 2.10 when using GTK2.
+         GTK+ >= 3.0.0, GtkSourceView >= 3.0.0 when using GTK3.
          New dependency: docbook-xsl
 
 GNUSim8085 1.3.7 (20 Feb 2011)
